[gd_scene load_steps=3 format=3 uid="uid://cbho1lby7u1fo"]

[ext_resource type="Script" uid="uid://dj28rpk2owgvf" path="res://scenes/tech_tree/tech_tree_ui.gd" id="1_eyr3g"]
[ext_resource type="Script" uid="uid://cixsfalmv7kvg" path="res://scenes/tech_tree/edge_layer.gd" id="2_ock1h"]

[node name="TechTreeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eyr3g")

[node name="VertexLayer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EdgeLayer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_ock1h")
